# cae_sae

./: .gitignore  README.md  pyproject.toml
configs/: default.toml  sweep.toml
notebooks/: analyze_sweep.ipynb
sae/: __init__.py  data.py  eval.py  losses.py  model.py  train.py
scripts/: eval_sweep.py  eval_sweep.sh  sweep.py  train_single.py
