[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cae-sae"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "toml>=0.10",
    "wandb>=0.15",
]

[project.optional-dependencies]
dev = ["pytest", "ipython"]
